fix ligand by receptor error due to change of models

--- a/ligand/templates/target_details.html
+++ b/ligand/templates/target_details.html
@@ -794,7 +794,7 @@
                       <th style="text-align:left">Activity<br />Type</th>
                       <th style="text-align:left">Activity<br />Relation</th>
                       <th style="text-align:left">Activity<br />Value</th>
-                      <th style="text-align:left">AssayType<br /><br /></th>
+                      <th style="text-align:left">Assay<br />Type<br /><br /></th>
                       <th style="text-align:left">Assay<br>Description</th>
                       <th style="text-align:left">Source<br /><br /></th>
                       <th style="border-left: 1px solid black;text-align:left" class="chemical-th">Mol<br />weight</th>
