--- a/drugs/templates/disease_overview.html
+++ b/drugs/templates/disease_overview.html
@@ -6,22 +6,34 @@
   .graydiv {
       height: 20px;
       width: 275px;
-      background: linear-gradient(to right, white 0%, black 100%)
+      background: linear-gradient(to right, white 0%, black 100%);
+      border-style: solid;
+      border-color: black;
+      border-width: 1px; /* Adjust the thickness here */
   }
   .approveddiv {
       height: 20px;
       width: 150px;
-      background: linear-gradient(to right, white 0%, #2c87c8 100%)
+      background: linear-gradient(to right, white 0%, #2c87c8 100%);
+      border-style: solid;
+      border-color: black;
+      border-width: 1px; /* Adjust the thickness here */
   }
   .repurposeddiv {
       height: 20px;
       width: 150px;
-      background: linear-gradient(to right, white 0%, #ae5dae 100%)
+      background: linear-gradient(to right, white 0%, #ae5dae 100%);
+      border-style: solid;
+      border-color: black;
+      border-width: 1px; /* Adjust the thickness here */
   }
   .agentsdiv {
       height: 20px;
       width: 150px;
-      background: linear-gradient(to right, white 0%, #dd2628 100%)
+      background: linear-gradient(to right, white 0%, #dd2628 100%);
+      border-style: solid;
+      border-color: black;
+      border-width: 1px; /* Adjust the thickness here */
   }
   .color_phase1 {
       color: #f5bcbf;
@@ -152,7 +164,7 @@
 
 <div class="tab-content">
   <div id="summary" class="tab-pane fade in active">
-    <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
+    <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;margin-top: 20px;margin-bottom: 10px;">
       <div class="col-md-12">
         <div style="float: left; position: relative; padding-right: 10px;" class="text-center">
           <b>New agents in trial</b>
@@ -167,7 +179,7 @@
           <div class="approveddiv"></div>
         </div>
         <br />
-        <div class="col-md-12" style="margin-bottom: 40px;">
+        <div class="col-md-12" style="margin-bottom: 40px;margin-top: 20px;">
           {% for block in combined %}
           <details>
             <summary>
@@ -185,17 +197,14 @@
   </div>
   <div id="list" class="tab-pane fade in">
     <div style="padding-top: 10px; font-size: 11px; white-space: nowrap;">
-      <div class="col-md-12">
-        <!-- ############ -->
-        <!-- ## Layout ## -->
-        <!-- ############ -->
-        <div class="col-md-8" style="margin-top: 30px;">
-          <!-- ##################### -->
-          <!-- ## Download button ## -->
-          <!-- ##################### -->
-        <div id="ListPlot" class="text-left" style="margin-top: 120px;"></div>
-        <div class="col-md-3">
-          <div class="text-center">
+      <div class="col-md-12" style="margin-left: -20px;">
+        <!-- # List plot # -->
+        <div class="col-md-1">
+          <div id="ListPlot" class="text-left" style="margin-top: 10px;"></div>
+        </div>
+        <!-- ## Download button ## -->
+        <div class="col-md-7" style="margin-top: 40px">
+          <div class="text-right">
             <div class="dropdown">
               <button type="button" class="btn btn-primary dropdown-toggle" style="font-size: 14px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="glyphicon glyphicon-download" style="vertical-align: top;line-height: 1.3"></span> Download <span class="caret"></span>
@@ -209,7 +218,8 @@
             </div>
           </div>
         </div>
-        </div>
+        
+
       </div>
     </div>
   </div>
@@ -247,12 +257,12 @@ var modded_list_data = Initialize_Data(listdata);
 // #################################
 
 // # Initialize layout #
-var Layout_dict = {columns: 4, col_breaker: 'Custom', col_max_label: 'Auto', indentation: 'Yes'};
+var Layout_dict = {columns: 2, col_breaker: 'Custom', col_max_label: 'Custom', Col_break_number:150, indentation: 'Yes'};
 
 //  Initialize styling
 var Styling_Option_dict = {
-    ReceptorFamily: {Bold: true, Italic: false, Underline: false, Fontsize: "20px", Color: "#000"},
-    Receptor: {Bold: false, Italic: false, Underline: false, Fontsize: "14px", Color: "#000"}};
+    ReceptorFamily: {Bold: true, Italic: false, Underline: false, Fontsize: "11px", Color: "#000"},
+    Receptor: {Bold: false, Italic: false, Underline: false, Fontsize: "10px", Color: "#000"}};
 
 // ## Initialization of global data for list ##
 function fixedStyling(list_data_wow, data_types_list) {
@@ -312,8 +322,10 @@ var Data_Category_array = List_Data_result.category_array;
 function Listplot_render_visualization(){
   const Col_break_number = Layout_dict.col_max_label === "Auto" ? Math.ceil(Data_array.length / Layout_dict.columns) : Layout_dict.Col_break_number;
   var layout_spacing = Calculate_dimension(Data_array, Data_Category_array, Col_break_number, Layout_dict.columns, Label_conversion_dict, Label_names, Styling_Option_dict);
-  RenderListPlot_Labels(Data_array,Data_Category_array, 'ListPlot',Styling_Option_dict,Layout_dict,Label_conversion_dict,Label_names);
-  data_visualization(Data_array, Data_Category_array, 'ListPlot', Layout_dict, Data_styling, layout_spacing);
+  // setting layout manually
+  // layout_spacing['Col1'] = 750;
+  RenderListPlot_Labels(Data_array,Data_Category_array, 'ListPlot',Styling_Option_dict,Layout_dict,Label_conversion_dict,Label_names,16);
+  data_visualization(Data_array, Data_Category_array, 'ListPlot', Layout_dict, Data_styling, layout_spacing,16,5,11);
 }
 
 document.addEventListener("DOMContentLoaded", function() {
@@ -329,7 +341,7 @@ $('.dropdown-menu').on('click', function(event){
   });
 
 // Trigger initialization when the document is fully loaded
-document.addEventListener("DOMContentLoaded", initializeStylingOptions);
+// document.addEventListener("DOMContentLoaded", initializeStylingOptions());
 
 // ###################
 // ## Data styling ##
